ArgoCD GitOps/NodeJS Frontend + Backend/deployments/backend-nodejs-frontend-backend-cors-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-frontend-backend-cors
