ArgoCD GitOps/NodeJS Frontend + Backend/deployments/frontend-nodejs-frontend-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-nodejs-frontend-backend-ingress
  labels:
    name: frontend-nodejs-frontend-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: nodejs-frontend-backend.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-frontend-backend-svc
            port: 
              number: 80
